[desk-tool] fix badge overlap margins

--- a/packages/@sanity/desk-tool/src/panes/documentPane/statusBar/documentStatusBarSparkline.css
+++ b/packages/@sanity/desk-tool/src/panes/documentPane/statusBar/documentStatusBarSparkline.css
@@ -41,6 +41,7 @@
 }
 
 .sparkline {
+  display: block;
   position: absolute;
   top: calc((100% - 1px) / 2);
   height: 1px;
@@ -65,6 +66,10 @@
   z-index: 10;
   font-size: var(--font-size-large);
   cursor: inherit;
+
+  @nest &:not(:first-of-type):not(:last-of-type) {
+    margin-right: calc(var(--large-padding) * -1);
+  }
 
   @nest &[data-color='success'] {
     background-color: var(--state-success-color);
